--- a/PYTHON/Hunter_College/GaussianParser_EnergyXYZ.ipynb
+++ b/PYTHON/Hunter_College/GaussianParser_EnergyXYZ.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/Cesar/Desktop/Tri_data_'"
+       "'/home/crpbn/Desktop/Tri_data_'"
       ]
      },
      "execution_count": 2,
@@ -86,159 +86,159 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "./Tri_A154_0007\n",
+      "./Tri_A154_ga09\n",
       "File Done!\n",
       "coords_df contains: 84 rows\n",
       "\n",
-      "./Tri_A154_ga19\n",
+      "./Tri_A154_ga01\n",
       "File Done!\n",
       "coords_df contains: 168 rows\n",
       "\n",
-      "./Tri_A154_0000\n",
+      "./Tri_A154_ga07\n",
       "File Done!\n",
       "coords_df contains: 252 rows\n",
       "\n",
-      "./Tri_A154_ga17\n",
+      "./Tri_A154_ga13\n",
       "File Done!\n",
       "coords_df contains: 336 rows\n",
       "\n",
-      "./Tri_A154_ga10\n",
+      "./Tri_A154_0000\n",
       "File Done!\n",
       "coords_df contains: 420 rows\n",
       "\n",
-      "./Tri_A154_ga11\n",
+      "./Tri_A154_0001\n",
       "File Done!\n",
       "coords_df contains: 504 rows\n",
       "\n",
-      "./Tri_A154_0008\n",
+      "./Tri_A154_0004\n",
       "File Done!\n",
       "coords_df contains: 588 rows\n",
       "\n",
-      "./Tri_A154_ga16\n",
+      "./Tri_A154_0008\n",
       "File Done!\n",
       "coords_df contains: 672 rows\n",
       "\n",
-      "./Tri_A154_ga20\n",
+      "./Tri_A154_0046\n",
       "File Done!\n",
       "coords_df contains: 756 rows\n",
       "\n",
-      "./Tri_A154_0001\n",
+      "./Tri_A154_ga15\n",
       "File Done!\n",
       "coords_df contains: 840 rows\n",
       "\n",
-      "./Tri_A154_ga18\n",
+      "./Tri_A154_ga20\n",
       "File Done!\n",
       "coords_df contains: 924 rows\n",
       "\n",
-      "./Tri_A154_0006\n",
+      "./Tri_A154_0007\n",
       "File Done!\n",
       "coords_df contains: 1008 rows\n",
       "\n",
-      "./Tri_A154_0132\n",
+      "./Tri_A154_ga06\n",
       "File Done!\n",
       "coords_df contains: 1092 rows\n",
       "\n",
-      "./Tri_A154_0046\n",
+      "./Tri_A154_ga03\n",
       "File Done!\n",
       "coords_df contains: 1176 rows\n",
       "\n",
-      "./Tri_A154_0041\n",
+      "./Tri_A154_ga05\n",
       "File Done!\n",
       "coords_df contains: 1260 rows\n",
       "\n",
-      "./Tri_A154_0024\n",
+      "./Tri_A154_0014\n",
       "File Done!\n",
       "coords_df contains: 1344 rows\n",
       "\n",
-      "./Tri_A154_ga05\n",
+      "./Tri_A154_ga16\n",
       "File Done!\n",
       "coords_df contains: 1428 rows\n",
       "\n",
-      "./Tri_A154_ga02\n",
+      "./Tri_A154_0034\n",
       "File Done!\n",
       "coords_df contains: 1512 rows\n",
       "\n",
-      "./Tri_A154_0047\n",
+      "./Tri_A154_ga02\n",
       "File Done!\n",
       "coords_df contains: 1596 rows\n",
       "\n",
-      "./Tri_A154_0014\n",
+      "./Tri_A154_ga12\n",
       "File Done!\n",
       "coords_df contains: 1680 rows\n",
       "\n",
-      "./Tri_A154_ga03\n",
+      "./Tri_A154_0140\n",
       "File Done!\n",
       "coords_df contains: 1764 rows\n",
       "\n",
-      "./Tri_A154_ga04\n",
+      "./Tri_A154_0047\n",
       "File Done!\n",
       "coords_df contains: 1848 rows\n",
       "\n",
-      "./Tri_A154_0003\n",
+      "./Tri_A154_0006\n",
       "File Done!\n",
       "coords_df contains: 1932 rows\n",
       "\n",
-      "./Tri_A154_0004\n",
+      "./Tri_A154_0051\n",
       "File Done!\n",
       "coords_df contains: 2016 rows\n",
       "\n",
-      "./Tri_A154_ga13\n",
+      "./Tri_A154_0041\n",
       "File Done!\n",
       "coords_df contains: 2100 rows\n",
       "\n",
-      "./Tri_A154_ga14\n",
+      "./Tri_A154_ga11\n",
       "File Done!\n",
       "coords_df contains: 2184 rows\n",
       "\n",
-      "./Tri_A154_0051\n",
+      "./Tri_A154_0002\n",
       "File Done!\n",
       "coords_df contains: 2268 rows\n",
       "\n",
-      "./Tri_A154_0060\n",
+      "./Tri_A154_0132\n",
       "File Done!\n",
       "coords_df contains: 2352 rows\n",
       "\n",
-      "./Tri_A154_ga15\n",
+      "./Tri_A154_0010\n",
       "File Done!\n",
       "coords_df contains: 2436 rows\n",
       "\n",
-      "./Tri_A154_0034\n",
+      "./Tri_A154_ga04\n",
       "File Done!\n",
       "coords_df contains: 2520 rows\n",
       "\n",
-      "./Tri_A154_ga12\n",
+      "./Tri_A154_ga17\n",
       "File Done!\n",
       "coords_df contains: 2604 rows\n",
       "\n",
-      "./Tri_A154_0002\n",
+      "./Tri_A154_0003\n",
       "File Done!\n",
       "coords_df contains: 2688 rows\n",
       "\n",
-      "./Tri_A154_0140\n",
+      "./Tri_A154_ga14\n",
       "File Done!\n",
       "coords_df contains: 2772 rows\n",
       "\n",
-      "./Tri_A154_ga01\n",
+      "./Tri_A154_ga19\n",
       "File Done!\n",
       "coords_df contains: 2856 rows\n",
       "\n",
-      "./Tri_A154_ga06\n",
+      "./Tri_A154_ga18\n",
       "File Done!\n",
       "coords_df contains: 2940 rows\n",
       "\n",
-      "./Tri_A154_ga08\n",
+      "./Tri_A154_ga10\n",
       "File Done!\n",
       "coords_df contains: 3024 rows\n",
       "\n",
-      "./Tri_A154_ga09\n",
+      "./Tri_A154_ga08\n",
       "File Done!\n",
       "coords_df contains: 3108 rows\n",
       "\n",
-      "./Tri_A154_0010\n",
+      "./Tri_A154_0060\n",
       "File Done!\n",
       "coords_df contains: 3192 rows\n",
       "\n",
-      "./Tri_A154_ga07\n",
+      "./Tri_A154_0024\n",
       "File Done!\n",
       "coords_df contains: 3276 rows\n"
      ]
@@ -353,74 +353,74 @@
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.805449</td>\n",
-       "      <td>1.924452</td>\n",
-       "      <td>-0.664573</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>2.107017</td>\n",
+       "      <td>1.528947</td>\n",
+       "      <td>0.360723</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.609163</td>\n",
-       "      <td>1.302777</td>\n",
-       "      <td>0.312234</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>2.969213</td>\n",
+       "      <td>0.427098</td>\n",
+       "      <td>0.216815</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.187415</td>\n",
-       "      <td>1.729413</td>\n",
-       "      <td>1.710619</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>3.739042</td>\n",
+       "      <td>0.551721</td>\n",
+       "      <td>-1.094809</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.197060</td>\n",
-       "      <td>3.240218</td>\n",
-       "      <td>1.840575</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>4.563468</td>\n",
+       "      <td>1.825350</td>\n",
+       "      <td>-1.067774</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.355564</td>\n",
-       "      <td>3.871601</td>\n",
-       "      <td>0.737773</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>3.689264</td>\n",
+       "      <td>3.026712</td>\n",
+       "      <td>-0.754952</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Center Number Atomic Number Atomic Type          X         Y          Z  \\\n",
-       "0             1             8           0  -1.805449  1.924452  -0.664573   \n",
-       "1             2             6           0  -2.609163  1.302777   0.312234   \n",
-       "2             3             6           0  -2.187415  1.729413   1.710619   \n",
-       "3             4             6           0  -2.197060  3.240218   1.840575   \n",
-       "4             5             6           0  -1.355564  3.871601   0.737773   \n",
+       "  Center Number Atomic Number Atomic Type         X         Y          Z  \\\n",
+       "0             1             8           0  2.107017  1.528947   0.360723   \n",
+       "1             2             6           0  2.969213  0.427098   0.216815   \n",
+       "2             3             6           0  3.739042  0.551721  -1.094809   \n",
+       "3             4             6           0  4.563468  1.825350  -1.067774   \n",
+       "4             5             6           0  3.689264  3.026712  -0.754952   \n",
        "\n",
        "      E(RPBE1PBE)       Molecule  \n",
-       "0  -2159.39703861  Tri_A154_0007  \n",
-       "1  -2159.39703861  Tri_A154_0007  \n",
-       "2  -2159.39703861  Tri_A154_0007  \n",
-       "3  -2159.39703861  Tri_A154_0007  \n",
-       "4  -2159.39703861  Tri_A154_0007  "
+       "0  -2159.40143903  Tri_A154_ga09  \n",
+       "1  -2159.40143903  Tri_A154_ga09  \n",
+       "2  -2159.40143903  Tri_A154_ga09  \n",
+       "3  -2159.40143903  Tri_A154_ga09  \n",
+       "4  -2159.40143903  Tri_A154_ga09  "
       ]
      },
      "execution_count": 5,
@@ -492,74 +492,74 @@
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.805449</td>\n",
-       "      <td>1.924452</td>\n",
-       "      <td>-0.664573</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>2.107017</td>\n",
+       "      <td>1.528947</td>\n",
+       "      <td>0.360723</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.609163</td>\n",
-       "      <td>1.302777</td>\n",
-       "      <td>0.312234</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>2.969213</td>\n",
+       "      <td>0.427098</td>\n",
+       "      <td>0.216815</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.187415</td>\n",
-       "      <td>1.729413</td>\n",
-       "      <td>1.710619</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>3.739042</td>\n",
+       "      <td>0.551721</td>\n",
+       "      <td>-1.094809</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.197060</td>\n",
-       "      <td>3.240218</td>\n",
-       "      <td>1.840575</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>4.563468</td>\n",
+       "      <td>1.825350</td>\n",
+       "      <td>-1.067774</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.355564</td>\n",
-       "      <td>3.871601</td>\n",
-       "      <td>0.737773</td>\n",
-       "      <td>-2159.39703861</td>\n",
-       "      <td>Tri_A154_0007</td>\n",
+       "      <td>3.689264</td>\n",
+       "      <td>3.026712</td>\n",
+       "      <td>-0.754952</td>\n",
+       "      <td>-2159.40143903</td>\n",
+       "      <td>Tri_A154_ga09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Center Number Atomic Number Atomic Type          X         Y          Z  \\\n",
-       "0             1             8           0  -1.805449  1.924452  -0.664573   \n",
-       "1             2             6           0  -2.609163  1.302777   0.312234   \n",
-       "2             3             6           0  -2.187415  1.729413   1.710619   \n",
-       "3             4             6           0  -2.197060  3.240218   1.840575   \n",
-       "4             5             6           0  -1.355564  3.871601   0.737773   \n",
+       "  Center Number Atomic Number Atomic Type         X         Y          Z  \\\n",
+       "0             1             8           0  2.107017  1.528947   0.360723   \n",
+       "1             2             6           0  2.969213  0.427098   0.216815   \n",
+       "2             3             6           0  3.739042  0.551721  -1.094809   \n",
+       "3             4             6           0  4.563468  1.825350  -1.067774   \n",
+       "4             5             6           0  3.689264  3.026712  -0.754952   \n",
        "\n",
        "      E(RPBE1PBE)       Molecule  \n",
-       "0  -2159.39703861  Tri_A154_0007  \n",
-       "1  -2159.39703861  Tri_A154_0007  \n",
-       "2  -2159.39703861  Tri_A154_0007  \n",
-       "3  -2159.39703861  Tri_A154_0007  \n",
-       "4  -2159.39703861  Tri_A154_0007  "
+       "0  -2159.40143903  Tri_A154_ga09  \n",
+       "1  -2159.40143903  Tri_A154_ga09  \n",
+       "2  -2159.40143903  Tri_A154_ga09  \n",
+       "3  -2159.40143903  Tri_A154_ga09  \n",
+       "4  -2159.40143903  Tri_A154_ga09  "
       ]
      },
      "execution_count": 6,
@@ -898,75 +898,75 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Tri_A154_0007</th>\n",
+       "      <th>Tri_A154_ga09</th>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.805449</td>\n",
-       "      <td>1.924452</td>\n",
-       "      <td>-0.664573</td>\n",
-       "      <td>-2159.39703861</td>\n",
+       "      <td>2.107017</td>\n",
+       "      <td>1.528947</td>\n",
+       "      <td>0.360723</td>\n",
+       "      <td>-2159.40143903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tri_A154_0007</th>\n",
+       "      <th>Tri_A154_ga09</th>\n",
        "      <td>2</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.609163</td>\n",
-       "      <td>1.302777</td>\n",
-       "      <td>0.312234</td>\n",
-       "      <td>-2159.39703861</td>\n",
+       "      <td>2.969213</td>\n",
+       "      <td>0.427098</td>\n",
+       "      <td>0.216815</td>\n",
+       "      <td>-2159.40143903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tri_A154_0007</th>\n",
+       "      <th>Tri_A154_ga09</th>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.187415</td>\n",
-       "      <td>1.729413</td>\n",
-       "      <td>1.710619</td>\n",
-       "      <td>-2159.39703861</td>\n",
+       "      <td>3.739042</td>\n",
+       "      <td>0.551721</td>\n",
+       "      <td>-1.094809</td>\n",
+       "      <td>-2159.40143903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tri_A154_0007</th>\n",
+       "      <th>Tri_A154_ga09</th>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2.197060</td>\n",
-       "      <td>3.240218</td>\n",
-       "      <td>1.840575</td>\n",
-       "      <td>-2159.39703861</td>\n",
+       "      <td>4.563468</td>\n",
+       "      <td>1.825350</td>\n",
+       "      <td>-1.067774</td>\n",
+       "      <td>-2159.40143903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tri_A154_0007</th>\n",
+       "      <th>Tri_A154_ga09</th>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.355564</td>\n",
-       "      <td>3.871601</td>\n",
-       "      <td>0.737773</td>\n",
-       "      <td>-2159.39703861</td>\n",
+       "      <td>3.689264</td>\n",
+       "      <td>3.026712</td>\n",
+       "      <td>-0.754952</td>\n",
+       "      <td>-2159.40143903</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Center Number Atomic Number Atomic Type          X         Y  \\\n",
-       "Molecule                                                                     \n",
-       "Tri_A154_0007             1             8           0  -1.805449  1.924452   \n",
-       "Tri_A154_0007             2             6           0  -2.609163  1.302777   \n",
-       "Tri_A154_0007             3             6           0  -2.187415  1.729413   \n",
-       "Tri_A154_0007             4             6           0  -2.197060  3.240218   \n",
-       "Tri_A154_0007             5             6           0  -1.355564  3.871601   \n",
+       "              Center Number Atomic Number Atomic Type         X         Y  \\\n",
+       "Molecule                                                                    \n",
+       "Tri_A154_ga09             1             8           0  2.107017  1.528947   \n",
+       "Tri_A154_ga09             2             6           0  2.969213  0.427098   \n",
+       "Tri_A154_ga09             3             6           0  3.739042  0.551721   \n",
+       "Tri_A154_ga09             4             6           0  4.563468  1.825350   \n",
+       "Tri_A154_ga09             5             6           0  3.689264  3.026712   \n",
        "\n",
        "                       Z     E(RPBE1PBE)  \n",
        "Molecule                                  \n",
-       "Tri_A154_0007  -0.664573  -2159.39703861  \n",
-       "Tri_A154_0007   0.312234  -2159.39703861  \n",
-       "Tri_A154_0007   1.710619  -2159.39703861  \n",
-       "Tri_A154_0007   1.840575  -2159.39703861  \n",
-       "Tri_A154_0007   0.737773  -2159.39703861  "
+       "Tri_A154_ga09   0.360723  -2159.40143903  \n",
+       "Tri_A154_ga09   0.216815  -2159.40143903  \n",
+       "Tri_A154_ga09  -1.094809  -2159.40143903  \n",
+       "Tri_A154_ga09  -1.067774  -2159.40143903  \n",
+       "Tri_A154_ga09  -0.754952  -2159.40143903  "
       ]
      },
      "execution_count": 11,
@@ -2505,7 +2505,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Cesar/anaconda2/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2886: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "/home/crpbn/anaconda2/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2886: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
