--- a/PYTHON/Hunter_College/Computational_Chemistry_Research/glyP/Utilities.ipynb
+++ b/PYTHON/Hunter_College/Computational_Chemistry_Research/glyP/Utilities.ipynb
@@ -32,6 +32,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def __init__(self, file_path):\n",
+    "\n",
+    "\n",
+    "        normal_mode_flag=False\n",
+    "        freq_flag = False\n",
+    "        read_geom = False\n",
+    "\n",
+    "        #temprorary variables to hold the data\n",
+    "        freq = [] ; ints = [] ; vibs = [] ; geom = [] ; atoms = []\n",
+    "\n",
+    "        self.NAtoms = None  \n",
+    "        self._id    = str(file_path).split('/')[1]\n",
+    "        #.split('/')[1]: splits the 1st position of file_path string containing \"/\"\n",
+    "\n",
+    "        for line in file(file_path, 'r').readlines():                     \n",
+    "\n",
+    "                if self.NAtoms == None and re.search('^ NAtoms=', line):   # ' ^ ' in re.search searches line, & matches first                                                                            expression string that follows ^ \n",
+    "                    self.NAtoms = int(line.split()[1])\n",
+    "                    self.NVibs  = self.NAtoms*3-6\n",
+    "\n",
+    "                if re.search('^ Frequencies', line):        \n",
+    "                    freq_line = line.strip()                               #strip() removes commas\n",
+    "                    for f in freq_line.split()[2:5]: freq.append(float(f)) #split() takes each stripped value & creates                                                                                    individual strings by removing its respective                                                                                  whitespace (indents in Python Script) & spaces\n",
+    "                    normal_mode_flag = False\n",
+    "\n",
+    "                elif re.search('^ IR Inten', line):        \n",
+    "                    ir_line = line.strip()                 \n",
+    "                    for i in ir_line.split()[3:6]: ints.append(float(i))\n",
+    "\n",
+    "                elif re.search('^  Atom  AN', line): \n",
+    "                     normal_mode_flag = True                               #locating normal modes of a frequency\n",
+    "                     mode_1 = []; mode_2 = []; mode_3 = [] \n",
+    "                     continue\n",
+    "\n",
+    "                elif normal_mode_flag == True and re.search('^\\s*.\\d\\s\\s\\s\\d', line): # '\\s': matches whitespace + non-breaks                                                         # ' * ': results in RE to match 0 or more repetitions of the preceding RE                                                       # ' . ':mathes any character except a newline                                                                                   # ' \\d ':matches any Unicode decimal digit 0-9\n",
+    "                    \n",
+    "                     mode_1.append(map(float, line.split()[2:5])) # split() string into list, then list is changed to a float\n",
+    "                     mode_2.append(map(float, line.split()[5:8]))\n",
+    "                     mode_3.append(map(float, line.split()[8:11]))\n",
+    "\n",
+    "                elif normal_mode_flag == True: \n",
+    "                     normal_mode_flag = False \n",
+    "                     for m in [mode_1, mode_2, mode_3]: vibs.append(np.array(m))\n",
+    "\n",
+    "                elif freq_flag == False and re.search('Normal termination', line): freq_flag = True\n",
+    "\n",
+    "                elif freq_flag == True and re.search('SCF Done',   line): self.E = float(line.split()[4])\n",
+    "                elif freq_flag == True and re.search('Sum of electronic and zero-point Energies',   line): self.Ezpe = float(line.split()[6])\n",
+    "                elif freq_flag == True and re.search('Sum of electronic and thermal Enthalpies' ,   line): self.H    = float(line.split()[6])                    \n",
+    "                elif freq_flag == True and re.search('Sum of electronic and thermal Free Energies', line): self.F    = float(line.split()[7])\n",
+    "\n",
+    "                elif freq_flag == True and re.search('Coordinates', line) : read_geom = True\n",
+    "                elif freq_flag == True and read_geom == True and re.search('^\\s*.\\d', line):\n",
+    "                     geom.append(map(float, line.split()[3:6]))\n",
+    "                     atoms.append(int(line.split()[1]))\n",
+    "                     if int(line.split()[0]) == self.NAtoms:\n",
+    "                       read_geom = False\n",
+    "\n",
+    "        self.Freq = np.array( freq ) ; self.Ints = np.array( ints )\n",
+    "        self.Vibs=np.zeros((self.NVibs, self.NAtoms, 3))\n",
+    "        for i in range(self.NVibs): self.Vibs[i,:,:] = vibs[i]\n",
+    "        self.Geom = np.array(geom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gaussian_broadening(self, broaden, resolution=1):\n",
+    " \n",
+    "        ''' Performs gaussian broadening on IR spectrum:\n",
+    "        Args:\n",
+    "            broaden - gaussian broadening in wn-1\n",
+    "            resolution - resolution of the spectrum (number of points for 1 wn)\n",
+    "                         defaults is 1, needs to be fixed in plotting\n",
+    "        Returns:\n",
+    "            self.IR - np.array with dimmension 4000/resolution consisting\n",
+    "                      gaussian-boraden spectrum\n",
+    "        '''\n",
+    "\n",
+    "        self.IR = np.zeros((int(4000/resolution) + 1,))\n",
+    "        X = np.linspace(0,4000, int(4000/resolution)+1)\n",
+    "        for f, i in zip(self.Freq, self.Ints):  self.IR += i*np.exp(-0.5*((X-f)/int(broaden))**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def deriv(spec,h):\n",
     "   \"\"\" calculate first derivative of function 'spec'\n",
     "       using the central finite difference method up to 6th order,\n",
@@ -54,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +175,44 @@
     "      tnstop=len(tspec)+int((stop-tspec[-1][0])/w_incr-de2-0.00001)\n",
     "   return tnstart, tnstop, enstart, enstop\n",
     " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def integrate(integrand,delta):\n",
+    "   \"\"\" integrate using the trapezoid method as Zanazzi-Jona suggested and was used in the f77-program...\n",
+    "   \"\"\"\n",
+    "   integral = 0.5*(integrand[0][1]+integrand[-1][1])   \n",
+    "   for i in range(1,len(integrand)-1):\n",
+    "      integral += integrand[i][1]\n",
+    "   return integral*delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ypendry(spec,d1_spec,VI):\n",
+    "   \"\"\" calculate the Pendry Y-function: y=l^-1/(l^-2+VI^2) with l=I'/I (logarithmic derivative),\n",
+    "       J.B. Pendry, J. Phys. C: Solid St. Phys. 13 (1980) 937-44\n",
+    "   \"\"\"\n",
+    "   y=[[i[0],0] for i in spec]\n",
+    "\n",
+    "   for i in range(len(spec)):\n",
+    "      if (abs(spec[i][1]) <= 1.E-7):\n",
+    "         if (abs(d1_spec[i][1]) <= 1.E-7):\n",
+    "            y[i][1] = 0 \n",
+    "         else:\n",
+    "            y[i][1] = (spec[i][1]/d1_spec[i][1])/((spec[i][1]/d1_spec[i][1])**2+VI**2)\n",
+    "      else:\n",
+    "         y[i][1] = (d1_spec[i][1]/spec[i][1])/(1+(d1_spec[i][1]/spec[i][1])**2*(VI**2))\n",
+    "   return y\n"
    ]
   },
   {
